# clang-tools-installer

./: Cargo.toml  LICENSE  README.md  cspell.config.yml
clang-tools-installer/: Cargo.toml
clang-tools-installer/src/: lib.rs  logger.rs  main.rs
clang-tools-installer/src/actions/: install.rs  mod.rs  uninstall.rs
clang-tools-installer/src/cli/: mod.rs  structs.rs
docs/: Cargo.toml  README.md  badge_hook.py  cli.yml  gen_cli_doc.py  mkdocs.yml
docs/docs/: index.md
docs/docs/stylesheets/: extra.css
docs/src/: lib.rs
