# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["clang-tools-installer", "docs"] #, "bindings/python", "bindings/node"]
default-members = ["clang-tools-installer"]
resolver = "2"

[workspace.package]
version = "2.0.0" # auto
authors = [
    "Brendan Doherty",
    "Peter Shen",
]
description = "Run clang-format and clang-tidy on a batch of files."
homepage = "https://cpp-linter.github.io/clang-tools-installer"
license = "MIT"

[profile.release]
lto = true
strip = "symbols"
