[package]
name = "clang-tools-installer"
version = "0.1.0"
edition = "2021"
default-run = "clang-tools"

[[bin]]
name = "clang-tools"
path = "src/main.rs"
test = false

[dependencies]
anyhow = "1.0.93"
clap = "4.5.21"
colored = "2.1.0"
lenient_semver = "0.4.2"
log = {version = "0.4.22", features = ["std"]}
reqwest = "0.12.9"
semver = "1.0.23"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"]}
which = "7.0.0"
tokio-macros = "2.4.0"
tokio-stream = "0.1.16"
regex = "1.11.1"
